# rest_rpg/src/main/java/com/michael1099/rest_rpg/adventure/model/Adventure.java
@@ -1,0 +1,73 @@
+package com.michael1099.rest_rpg.adventure.model;
+
+import com.michael1099.rest_rpg.enemy.model.Enemy;
+import com.michael1099.rest_rpg.occupation.Occupation;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.ManyToOne;
+import jakarta.persistence.NamedAttributeNode;
+import jakarta.persistence.NamedEntityGraph;
+import jakarta.persistence.OneToMany;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotNull;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import java.util.HashSet;
+import java.util.Set;
+
+@Entity
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+@NamedEntityGraph(name = Adventure.ADVENTURE_BASIC,
+        attributeNodes = {
+                @NamedAttributeNode("enemy")
+        }
+)
+public class Adventure {
+
+    public static final String ADVENTURE_BASIC = "ADVENTURE_BASIC_GRAPH";
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "id", nullable = false)
+    private Long id;
+
+    @NotNull
+    private String name;
+
+    private int adventureTimeInMinutes;
+
+    private int xpForAdventure;
+
+    private int goldForAdventure;
+
+    @NotNull
+    @ManyToOne(fetch = FetchType.LAZY)
+    private Enemy enemy;
+
+    @OneToMany(mappedBy = "adventure")
+    private Set<Occupation> occupation = new HashSet<>();
+
+    private boolean deleted;
+
+    public static Adventure of(@NotNull @Valid AdventureCreateRequestDto dto, @NotNull Enemy enemy) {
+        return Adventure.builder()
+                .name(dto.getName())
+                .adventureTimeInMinutes(dto.getAdventureLengthInMinutes())
+                .xpForAdventure(dto.getXpForAdventure())
+                .goldForAdventure(dto.getGoldForAdventure())
+                .enemy(enemy)
+                .build();
+    }
+}
